Update model paths, enhance label definitions, and improve image annotation process

--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,6 @@ Thumbs.db
 
 # Fichiers spécifiques au projet
 files/facture/
-results_trains/invoice_yolov8/
-results_trains/invoice_yolov8_retrain_fast1/
+results_trains/
 runs/
 annotated_images/
